--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
     "!dist/"
   ],
   "dependencies": {
-    "angularjs": "^1.4.4",
+    "angular": "^1.4.4",
     "font-awesome": "^4.4.0"
   },
   "devDependencies": {
